--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = 'setuptools.build_meta'
 
 [project]
 name = 'smartcrop'
-version = '0.4.0'
+version = '0.5.0'
 
 # Metadata
 authors = [
@@ -30,8 +30,8 @@ requires-python = '>=3.9'
 dependencies = [
     'numpy',
     'pillow>=4.0.0',
-    'PyGObject',
-    'pytoolbox[imaging]>=14.5.1'
+    'piexif',
+    'opencv-python'
 ]
 
 [project.optional-dependencies]
